<resources>
    <string name="app_name">Cafeteria</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_cart">Cart</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User ID (Mobile No.)</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Submit</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_pwd">Forgot Password ?</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_menu">My Menu</string>
    <string name="reserve_table">Reserve Table</string>
    <string name="create_table">Create Event</string>
    <string name="menu">Menu</string>
    <string name="status_default">Status : Rush Hour</string>
    <string name="food_image">food image</string>
    <string name="price">Price</string>
    <string name="plus">plus</string>
    <string name="vendor">Vendor</string>
    <string name="calorie">Calorie</string>
    <string name="resting_heart_rate">Resting Heart Rate</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="personal_info">Personal Information</string>
    <string name="feedback">Feedback</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="habits">Habits</string>
    <string name="meals_per_day">Meals Per Day</string>
    <string name="dairy">Dairy</string>
    <string name="consume_dairy">Consume Dairy</string>
    <string name="no_dairy">No Dairy</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="submit">Submit</string>
    <string name="saved_menu">Saved Menus</string>
    <string name="personalised_menu">Personalised Menu</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="add_to_my_menu">Add to My Menu</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="basic_information">Basic Information</string>

    <array name="exercises">
        <item>None</item>
        <item>Very Low (1 Hour a Week)</item>
        <item>Low (2-3 Hours a Week)</item>
        <item>Medium (3-4 Hours a Week)</item>
        <item>High (5-6 Hours a Week)</item>
        <item>Very High (6-7 Hours a Week)</item>
    </array>

    <array name="facilities">
        <item>Bagmane Tech Park</item>
        <item>Swing 1 - Embassy TechVillage</item>
        <item>Swing 2 - Embassy TechVillage</item>
        <item>Swing 3 - Embassy TechVillage</item>
    </array>

    <array name="feedback_options">
        <item>Excellent</item>
        <item>Good</item>
        <item>Average</item>
        <item>Dissatisfied</item>
    </array>

    <string name="title_activity_cart">My Cart</string>
    <string name="cart">cart</string>
    <string name="Continue">Continue</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="time_hint">hh:mm</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="dine_in">Dine In</string>
    <string name="pick_up">Pick Up</string>
    <string name="order_type">Order Type</string>
    <string name="credit_card">Credit Card</string>
    <string name="valid_upto">Valid Upto (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="amount">Amount</string>
    <string name="add_to_wallet">Add To Wallet</string>
    <string name="please_rate">Please Rate</string>
    <string name="title_activity_place_order">" "</string>
</resources>
