<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.persistent.cafeteria.Fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <Spinner
            android:id="@+id/facilities_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/facilities"
            android:padding="5dp" />

        <TextView
            android:id="@+id/facilities_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/status_default" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/menu"
            android:id="@+id/home_menu_button"
            android:paddingTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_menu" />

        <ImageButton
            android:contentDescription="@string/create_table"
            android:id="@+id/home_create_event_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_create_event" />

    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/reserve_table"
            android:id="@+id/home_reserve_table_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_reserve_table" />

        <ImageButton
            android:contentDescription="@string/my_menu"
            android:id="@+id/home_my_menu_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_my_menu" />

    </LinearLayout>

</LinearLayout>
