<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/lighter_gray"
    tools:context="com.persistent.cafeteria.Fragment.WalletFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:contentDescription="@string/credit_card"
        android:src="@drawable/ic_credit_card_design"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/credit_card"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/valid_upto"
                android:maxLines="1"
                android:maxLength="5"
                android:singleLine="true"
                android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:textSize="@dimen/text_size_medium"
                android:hint="@string/cvv"
                android:maxLines="1"
                android:maxLength="3"
                android:singleLine="true"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:textSize="@dimen/text_size_medium"
            android:hint="@string/amount"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/wallet_submit"
        android:textAllCaps="false"
        android:text="@string/add_to_wallet"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:background="@color/dark_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
